# archradio

./: .gitignore  README.md  fetch-stations.js  konten.md  package-lock.json  package.json  release.md  worker.js
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json
client/src/: app.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  fetch.rs  filter.rs  lib.rs  models.rs  smtc.rs  transform.rs
~/.tauri/: myapp.key  myapp.key.pub
