[package]
name = "archradio"
version = "1.0.0"
description = "A simple application for listening to radio"
authors = ["Khoirul Aksara"]
license = "MIT"
repository = "https://github.com/khoirulaksara/archradio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.6.0"
tauri-plugin-notification = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
windows = { version = "0.52", features = [
  "Win32_UI_Shell",
  "Media",
  "Media_Playback",
  "Media_Control",
  "Storage_Streams",
  "Foundation"
] }
